crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned_uses-3.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"unpinned-uses/action.yml\")).args([\"--pedantic\"]).run()?"
---
error[unpinned-uses]: unpinned action reference
 --> @@INPUT@@:8:7
  |
8 |       uses: asdf-vm/actions/setup@v3
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
  |
  = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:11:7
   |
11 |       uses: asdf-vm/actions/setup@main
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

2 findings: 0 unknown, 0 informational, 0 low, 0 medium, 2 high
